...
      {
        'all': tr('Моя музыка', 'My music'),
        'favorites': tr('Избранное', 'Favorites'),
        'folders': tr('Папки', 'Folders'),
        'recent': tr('Недавно прослушанное', 'Recently played'),
        'added': tr('Недавно добавленное', 'Recently added'),
        'albums': tr('Альбомы', 'Albums'),
        'artists': tr('Исполнители', 'Artists'),
        'new': tr('Новый плейлист', 'New playlist'),
        'mode': tr('Режим очереди', 'Queue mode'),
        'previous': tr('Предыдущий', 'Previous'),
        'play': tr('Пуск / пауза', 'Play / pause'),
        'next': tr('Следующий', 'Next'),
...
